User Input Area

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="status.css">
-    <title>My Stats Screen</title>
+    <link rel="stylesheet" href="UserInput.css">
+    <title>User Input</title>
 </head>
 <body>
-    
 
-    <script></script>
+
+    <script src="UserInput.js"></script>
 </body>
 </html>
