User Input Styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>User Input</title>
 </head>
 <body>
-
+    <div class="UserInput-Container">
+        <label for="MyUsername">Username</label>
+        <input type="text" id="MyUsername" required class="Username">
+        <label for="MyPassword">Password</label>
+        <input type="text" id="MyPassword" required class="Password">
+        <label for="Password">Comfirm Password</label>
+        <input type="text" id="MyPassword" required class="Password">
+        <button>Submit</button>
+    </div>
 
     <script src="UserInput.js"></script>
 </body>
