--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div class="UserInput-Container">
+        <div class="title">
+            <h1>Sign Up</h1>
+        </div>
+        <div class="inputs">
+       <form action="login.html">
         <label for="MyUsername">Username</label>
         <input type="text" id="MyUsername" required class="Username">
         <label for="MyPassword">Password</label>
@@ -15,6 +20,8 @@
         <label for="Password">Comfirm Password</label>
         <input type="text" id="MyPassword" required class="Password">
         <button>Submit</button>
+    </form>
+    </div>
     </div>
 
     <script src="UserInput.js"></script>
