--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <label for="MyUsername">Username</label>
         <input type="text" id="MyUsername" required class="Username">
         <label for="MyPassword">Password</label>
-        <input type="text" id="MyPassword" required class="Password">
+        <input type="password" id="MyPassword" required class="Password">
         <label for="Password">Comfirm Password</label>
-        <input type="text" id="MyPassword" required class="Password">
+        <input type="password" id="MyPassword" required class="Password">
         <button>Submit</button>
     </form>
     </div>
