Just Added the login

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>User Input</title>
 </head>
 <body>
+<div class="fullContainer">
     <div class="UserInput-Container">
         <div class="title">
             <h1>Sign Up</h1>
@@ -23,7 +24,7 @@
     </form>
     </div>
     </div>
-
+</div>
     <script src="UserInput.js"></script>
 </body>
 </html>
