--- a/login.html
+++ b/login.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="UserInput.css">
+    <link rel="stylesheet" href="login.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="UserInput-Container">
+<div class="container">
         <div class="title">
-            <h1>Sign Up</h1>
+            <h1>Login</h1>
         </div>
-        <div class="inputs">
-       <form action="login.html">
-        <label for="MyUsername">Username</label>
-        <input type="text" id="MyUsername" required class="Username">
-        <label for="MyPassword">Password</label>
-        <input type="password" id="MyPassword" required class="Password">
-        <button>Submit</button>
-    </form>
-    </div>
-    <script src="UserInput.js"></script>
+        <div class="login">
+            <form action="myCharacters.html">
+                <label for="MyUsername">Username</label>
+                <input type="text" id="MyUsername" required class="Username">
+                <label for="MyPassword">Password</label>
+                <input type="password" id="MyPassword" required class="Password">
+                <button>Login</button>
+            </form>
+        </div>
+</div>
+<script src="UserInput.js"></script>
 </html>
