fixed Login Background

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div class="inputs">
        <form action="login.html">
-        <label for="MyUsername">Username</label>
+        <label for="MyUsername">Create Username</label>
         <input type="text" id="MyUsername" required class="Username">
-        <label for="MyPassword">Password</label>
+        <label for="MyPassword">Create Password</label>
         <input type="password" id="MyPassword" required class="Password">
         <label for="Password">Comfirm Password</label>
         <input type="password" id="MyPassword" required class="Password">
