--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="fullContainer">
 <div class="container">
         <div class="title">
             <h1>Login</h1>
@@ -20,6 +21,7 @@
                 <button>Login</button>
             </form>
         </div>
+</div>
 </div>
 <script src="UserInput.js"></script>
 </html>
