Just created the Character profile

--- a/myCharacters.html
+++ b/myCharacters.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Characters</title>
 </head>
 <body>
-    
+        <div class="intro">
+            <h1>Welcome <span id="person">PlaceHolder</span></h1>
+            <p> This is your PreBuilt Starter Character that we have started you out with. 
+                You get 50 skill points to start with. Alocate them according to how you want you character to perform in a fantasy setting. 
+                You can either choose to be a wandering wisard who shares his wares, or you can be a stealthy assasin that hides in the shadows. 
+                This character is all yours please make it out to your hearts content good luck.
+            </p>
+        </div>
+
 </body>
 </html>
